# telemonitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Telemonitor/: helpers.py  main.py
telemonitor/: __init__.py  __main__.py  bot.py  core.py  helpers.py  main.py  startup.py
telemonitor/core/: cli.py  constants.py  io.py  logging.py  systemd_service.py
telemonitor/data/systemd_service/: telemonitor-bot-template.service
telemonitor/extensions/systemd_service/: __init__.py
telemonitor/extensions/systemd_service/files/: telemonitor-bot-template.service  telemonitor-start.sh  telemonitor_start.sh
tests/: test_telemonitor.py  test_version.py
