[tool.poetry]
name = "Telemonitor"
version = "0.0.1"
description = ""
authors = ["maximilionus <xxxarakxxx@gmail.com>"]
packages = [
    { include = "./Telemonitor" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
