[tool.poetry]
name = "Telemonitor"
version = "0.2.5"
description = ""
authors = ["maximilionus <xxxarakxxx@gmail.com>"]
packages = [
    { include = "./Telemonitor" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
uptime = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
telem = "Telemonitor.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
