[tool.poetry]
name = "telemonitor"
version = "2.0.0"
description = ""
authors = ["maximilionus <maximilionuss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.9.2"
uptime = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
toml = "^0.10.1"

[tool.poetry.scripts]
telem = "telemonitor.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
